# revmasm

./: Cargo.toml  LICENSE  README.md  tea.yaml
src/: assembler.rs  disassembler.rs  lib.rs  main.rs  opcodes.rs
src/types/: bytecodes.rs  mod.rs
tests/: assembler-tests.rs  disassembler-tests.rs  opcodes-tests.rs
