[package]
name = "revmasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"
authors = ["Yuqi Liu <yuqi.lyle@outlook.com"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/revmasm"
repository = "https://github.com/oneforalone/revmasm"
homepage = "https://docs.rs/revmasm"
description = "A EVM Assembler in Rust."

[dependencies]
hex = "0.4"
lazy_static = "1.4.0"
bytes = "1.3.0"