[package]
name = "revmasm"
version = "0.1.1"
edition = "2021"
rust-version = "1.66"
authors = ["Yuqi Liu <yuqi.lyle@outlook.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/oneforalone/revmasm"
description = "A EVM Assembler in Rust."

[dependencies]
hex = "0.4"
lazy_static = "1.4.0"
bytes = "1.3.0"